# option-pricing-lib

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
experiments/: bs_vs_mc_vanilla.py  delta_mc.py  digital_bs_vs_mc.py  vanilla_mc_convergence.py
oplib/greeks/: bs_mc.py
oplib/models/: gbm.py
oplib/pricers/: bs_digital.py  bs_geometric_asian.py  bs_vanilla.py  mc_digital.py  mc_vanilla.py  utils.py
src/greeks/: bs_mc.py
src/models/: gbm.py
src/pricers/: bs_geometric_asian.py  bs_vanilla.py  mc_digital.py  mc_vanilla.py  utils.py
tests/: test_asian_options.py  test_digital_options.py  test_european_options.py  test_mc_greeks.py
